tests/no_compile/invalid_offset.stderr
error[E0080]: evaluation of `_::{constant#0}` failed
 --> tests/no_compile/invalid_offset.rs:1:10
  |
1 | #[derive(derive_mmio::Mmio)]
  |          ^^^^^^^^^^^^^^^^^ the evaluated program panicked at 'invalid offset for field `data`', $DIR/tests/no_compile/invalid_offset.rs:1:10
  |
  = note: this error originates in the macro `$crate::panic::panic_2021` which comes from the expansion of the macro `assert` (in Nightly builds, run with -Z macro-backtrace for more info)

note: erroneous constant encountered
 --> tests/no_compile/invalid_offset.rs:1:10
  |
1 | #[derive(derive_mmio::Mmio)]
  |          ^^^^^^^^^^^^^^^^^
  |
  = note: this note originates in the derive macro `derive_mmio::Mmio` (in Nightly builds, run with -Z macro-backtrace for more info)
